--- a/MovieListGenerator.csproj.old.1
+++ b/MovieListGenerator.csproj.old.1
@@ -1,9 +1,6 @@
-<Project Sdk="Godot.NET.Sdk/4.0.1">
+<Project Sdk="Godot.NET.Sdk/4.0.0-beta.17">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
-  </ItemGroup>
 </Project>
